--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,14 +2,16 @@
 dependencies: []
 
 galaxy_info:
-  role_name: pip
   author: geerlingguy
   description: Pip (Python package manager) for Linux.
   issue_tracker_url: https://github.com/geerlingguy/ansible-role-pip/issues
   company: "Midwestern Mac, LLC"
-  license: "MIT"
-  min_ansible_version: 2.10
+  license: "license (BSD, MIT)"
+  min_ansible_version: 2.0
   platforms:
+    - name: EL
+      versions:
+        - all
     - name: Fedora
       versions:
         - all
